--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <img class="logo" src="/properpcb_logo.png">
     </div>
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <script src="build/bundle.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/progressButton.js"></script>
     <script>
