--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>proper pcb</title>
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app"></div>
